@@ -6,6 +6,7 @@ pts-core: Allow test profile test options to expose more helper information stri
 pts-core: External dependency updates
 pts_Graph: Pass/fail graph formatting improvements
 phodevi: Convert large RAM capacity basic strings into GB rather than large MB
+phodevi: Add support for Linux 5.6+ drivetemp kernel module for ATA drive temperatures
 
 Phoronix Test Suite 9.2.1
 11 December 2019
